# blinkroom

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: f73636289939_create_rooms_table.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: room.py
apps/api/app/routers/: rooms.py  websocket.py
apps/api/app/schemas/: message.py  room.py
apps/api/app/services/: message_service.py  websocket_manager.py
apps/api/app/utils/: room_id.py  username_generator.py
apps/web/app/: layout.tsx  page.tsx
apps/web/app/room/[id]/: page.tsx
apps/web/hooks/: useWebSocket.ts
